<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/listen"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mic"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/fa_solid"
        android:layout_gravity="center"
        android:text="@string/microphone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/initialTime" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelRecordingButtonClicked"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="35sp"
                android:fontFamily="@font/fa_solid"
                android:text="@string/times_circle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:onClick="onDoneRecordingButtonClicked"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="35sp"
                android:fontFamily="@font/fa_solid"
                android:text="@string/check_circle" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>


