<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RRItemDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/rrHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <View
                android:id="@+id/line_under_headline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/rrImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/line_under_image"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fa_solid"
                    android:gravity="center"
                    android:text="@string/clock"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/rrTimeElapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView" />
            </LinearLayout>

            <View
                android:id="@+id/line_under_time"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/rrDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/news_details" />

            <androidx.cardview.widget.CardView
                android:id="@+id/reporterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reporterHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/reporterHeading"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/line_under_reporterHeading"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/user_circle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fa_solid"
                            android:text="@string/user_circle"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/rrReporterName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:gravity="fill"
                            android:text="@string/author_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/mobile_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/fa_solid"
                            android:text="@string/mobile_alt"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/rrReporterPhoneNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/hint_phoneNumber"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/hint_moreItems"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/related_rr_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:onClick="onShareRRItemClicked"
        android:src="?attr/actionModeShareDrawable" />

</FrameLayout>